intro popolazioni sintetiche

--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -220,7 +220,7 @@ La distribuzione dei semi-assi cresce rapidamente tra $0.01-0.1\si{\astronomical
 \chapter{Confronto semi-quantitativo tra caratteristiche popolazioni sintetiche e osservate}
 }
 
-Per confrontare una popolazione planetaria simulata con le osservazioni \'e opportuno, oltre a tenere conto dei bias osservativi, valutare per quali sottoinsiemi dell'ensamble di pianeti osservato le approssimazioni fatte nel modello sono valide.
+Per confrontare una popolazione planetaria simulata con le osservazioni \'e opportuno, oltre a tenere conto dei bias osservativi, valutare per quali sottoinsiemi dell'ensamble di pianeti ossevati le approssimazioni fatte nel modello sono valide.
 
 \section{Struttura orbitale e tipo di pianeta}
 
