--- a/main.tex
+++ b/main.tex
@@ -111,8 +111,8 @@ Descrivo le tecniche osservative, le osservabili e effetti di selezione, quindi 
 \part{Formazione sistemi planetari: descrizione modello core accretion}\label{part:CAdesc}
 }
 
-Nei modelli globali la formazione planetaria \'e simulata partendo dalla fase finale di accrescimento di massa sulla stella 2centrale (per semplicit\'a considero stelle di $1\msun{}$ singole): il collasso di nube molecolare produce strutture appiattite la cui evoluzione \'e determinata dal trasporto di momento angolare verso l'esterno, l'interazione con l'oggetto centrale (campi magnetici vento stellare) e con l'ambiente circostante.
-L'ipotesi su cui si basano le simulazioni considerata \'e che la componente polverosa formi corpi pi\'u massicci fino a masse di frazioni di masse terrestri  ed eventualmente, per corpi sufficientemente massicci, accresca gas: lo scenario di core accretion (CA).
+Il collasso di nube molecolare produce strutture appiattite la cui evoluzione \'e determinata dal trasporto di momento angolare verso l'esterno, l'interazione con l'oggetto centrale (campi magnetici vento stellare) e con l'ambiente circostante.
+L'ipotesi su cui si basano le simulazioni considerate \'e che la componente polverosa formi corpi pi\'u massicci fino a masse di frazioni di masse terrestri  ed eventualmente, per corpi sufficientemente massicci, accresca gas: lo scenario di core accretion (CA).
 
 \input{CAdesc}
 \cleartorecto
@@ -120,7 +120,12 @@ L'ipotesi su cui si basano le simulazioni considerata \'e che la componente polv
 {\let\clearpage\relax\let\cleardoublepage\relax
 \part{Popolazioni planetarie sintetiche e confronto con osservazioni}
 }
-Per costruire un modello di formazione globale \'e necessario introdurre una descrizione semplificata dei processi fisici che portano alla formazione di un pianeta; quindi generare una popolazione planetaria a partire da distribuzione di condizioni iniziali del disco di accrescimento ricavate dalle osservazioni che riproduca la distribuzione di caratteristiche osservate, tenendo conto dei bias osservativi.
+
+Nei modelli globali la formazione planetaria \'e simulata partendo dalla fase finale di accrescimento di massa sulla stella centrale. Il variare delle caratteristiche dei sistemi planetari osservati sarebbe determinato dal variare delle condizioni iniziali: distribuzione di massa dei dischi protoplanetarii, metallicit\'a e tempo di vita, condizioni del cluster di cui faparte il disco.
+
+Una popolazione planetaria sintetica permette di determinare in maniera statistica l'accuratezza delle ipotesi su cui si basano i modelli di formazione planetaria tramite confronto con la distribuzione delle propriet\'a dei pianeti osservati, tenuto conto dei bias osservativi.
+
+Per costruire un modello di formazione globale \'e necessario introdurre una descrizione semplificata dei processi fisici che portano alla formazione di un pianeta; quindi generare una popolazione planetaria a partire da un gran numero di combinazioni di condizioni iniziali determinate casualmente distribuite in accordo alle osservazioni.
 
 \input{GFMresult}
 \cleartorecto
