logic montecarlo disk parameter/initial condition

--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -15,10 +15,10 @@ planet population synthesis
 \end{workout}
 
 \section{Modello disco di accrescimento e distribuzione condizioni iniziali}
+%Refs: Sec4 mordasini09
 
-Refs: Sec4 mordasini09
-
-La popolazione planetaria \'e costruita risolvendo un modello di formazione planetaria pi\'u o meno realistico a partire da condizioni iniziali distribuite per rispecchiare le osservazioni e determinate da argomenti teorici.
+Tramite metodi di montecarlo si determinano numerose combinazioni delle condizioni iniziali del disco e dei parametri scelti per descrivere la sua struttura.
+Le variabili di montecarlo ha distribuzione determinata dalle osservazioni di dischi protoplanetari.
 
 \begin{workout}[modello globale: evoluzione dal semplice al complesso]
 Global model of planets formation and evolution: more detailed submodels
