lodders03 and Pr, Re

--- a/seminario.bib
+++ b/seminario.bib
@@ -160,6 +160,17 @@ pages={1282},
   publisher={EDP Sciences}
 }
 
+@article{lodders2003solar,
+  title={Solar system abundances and condensation temperatures of the elements},
+  author={Lodders, Katharina},
+  journal={The Astrophysical Journal},
+  volume={591},
+  number={2},
+  pages={1220},
+  year={2003},
+  publisher={IOP Publishing}
+}
+
 @article{masset2007planetary,
   title={Planetary migration in gaseous protoplanetary disks},
   author={Masset, Fr{\'e}d{\'e}ric S},
