--- a/mathOp.sty
+++ b/mathOp.sty
@@ -16,5 +16,5 @@
 \DeclareMathOperator{\pol}{Pol}
 \DeclareMathOperator{\rot}{Rot}
 \DeclareMathOperator{\sign}{Sign}
-\DeclareMathOperator{\Re}{Re}
-\DeclareMathOperator{\Pr}{Pr}
+\DeclareMathOperator{\Rey}{Re}
+\DeclareMathOperator{\Pra}{Pr}
