--- a/main.tex
+++ b/main.tex
@@ -121,11 +121,11 @@ L'ipotesi su cui si basano le simulazioni considerate \'e che la componente polv
 \part{Popolazioni planetarie sintetiche e confronto con osservazioni}
 }
 
-Nei modelli globali la formazione planetaria \'e simulata partendo dalla fase finale di accrescimento di massa sulla stella centrale. Il variare delle caratteristiche dei sistemi planetari osservati sarebbe determinato dal variare delle condizioni iniziali: distribuzione di massa dei dischi protoplanetarii, metallicit\'a e tempo di vita, condizioni del cluster di cui faparte il disco.
+Le popolazioni planetarie sintetiche sono costruite partendo dalla fase finale di accrescimento di massa sulla stella centrale. Il variare delle caratteristiche dei sistemi planetari osservati \'e determinato dal variare delle condizioni iniziali: distribuzione di massa dei dischi protoplanetarii e di metallicit\'a, tempo di vita, condizioni del cluster di cui fa parte il disco.
 
 Una popolazione planetaria sintetica permette di determinare in maniera statistica l'accuratezza delle ipotesi su cui si basano i modelli di formazione planetaria tramite confronto con la distribuzione delle propriet\'a dei pianeti osservati, tenuto conto dei bias osservativi.
 
-Per costruire un modello di formazione globale \'e necessario introdurre una descrizione semplificata dei processi fisici che portano alla formazione di un pianeta; quindi generare una popolazione planetaria a partire da un gran numero di combinazioni di condizioni iniziali determinate casualmente distribuite in accordo alle osservazioni.
+A questo scopo  \'e necessario introdurre una descrizione semplificata dei processi fisici che portano alla formazione di un pianeta; quindi generare una popolazione planetaria a partire da un gran numero di combinazioni di condizioni iniziali determinate casualmente distribuite in accordo alle osservazioni.
 
 \input{GFMresult}
 \cleartorecto
