--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -134,8 +134,9 @@ f_{va04}=1.668(\frac{M_p}{\mjupiter{}})\expy{1/3}\exp{-\frac{M_p}{1.5\mjupiter{}
 \end{equation}
 \end{workout}
 
-\subsection{Parametrizzazioni della migrazione.}
+%\subsection{Descrizione della migrazione.}
 
+\begin{workout}[Descrizione della migrazione]
 \begin{equation}
 \TDy{t}{r}=f(p,q,p_{\nu},p_{\xi})\frac{M_p}{M_*}\frac{\Sigma r^2}{M_*}(\frac{r\Omega}{c_s})^2r\Omega
 \end{equation}
@@ -143,11 +144,11 @@ dove
 \begin{align}
 &p(r)=\TDly{r}{\Sigma},\ q(r)=\TDly{r}{T},\ p_{\nu}=\frac{2}{3}\sqrt{\Rey{} x_s^3},\ p_{\chi}=\frac{3p_{\nu}}{2\sqrt{\Pra{}}}
 \end{align}
+\end{workout}
 
 \begin{workout}[Migrazione mordasini 09]
 La velocit\'a di migrazione calcolata per disco isotermo (\cite{tanaka2002}) \'e troppo rapida
 \end{workout}
-
 
 \begin{workout}[model migration-pps]
 Tanaka02-m09
@@ -178,20 +179,16 @@ disk dominated
 planet dominates: $\TDy{t}{a}=-\frac{3\nu}{a}\frac{\Sigma(a,t)a^2}{M_p}$
 \end{workout}
 
-
-
 \section{popolazioni sintetiche}
-%Considero i risulati di alcuni modelli di formazione planetari (\cite{mordasini2018planetary}). 
-La soluzione delle equazioni che descrivono l'accrescimento di massa dei protopianeti e la loro evoluzione orbitale interata su numerose combinazioni delle condizioni iniziali produce una popolazione di sistemi planetari appena formati dal disco-protoplanetario.
-
-\begin{workout}[Diagramma $(a-M)$]
+%Considero i risulati di alcuni modelli di formazione planetari (\cite{mordasini2018planetary}).
+Il risultato del modello di formazione planetario a partire da numerose combinazioni delle condizioni iniziali produce una popolazione di sistemi planetari appena formati dal disco-protoplanetario.
 
 \begin{figure}[!ht]
-\includegraphics[trim={0cm 12cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{ma-synth}
-\caption{Da \cite{mordasini2018planetary}. Simulazione popolazione planetaria di 504 sistemi Punti rossi: pianeti giganti con $M_e/M_c>1$; blu hanno accresciuto core oltre la iceline, verdi all'interno dell'iceline .}
+\includegraphics[trim={0cm 12cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{ma-synth}\label{fig:ma-synth}
+\caption{Simulazione popolazione planetaria di 504 sistemi Punti rossi: pianeti giganti con $M_e/M_c>1$; punti blu: pianeti che hanno accresciuto core oltre la iceline mentre i punti verdi all'interno dell'iceline. Da \cite{mordasini2018planetary}.}
 \end{figure}
 
-La distribuzione della popolazione planetaria \'e mostrata in \ref{fig:MaLR-freq-synth}: la posizione finale di un pianeta \'e terminata principalmente dalla posizione iniziale e dai tempi caratteristici di accrescimento e migrazione; considerando inoltre l'interazione gravitazionale tra i pianeti si hanno effetti delle risonanze e eccitazione eccentricit\'a.
+La distribuzione della popolazione planetaria \'e mostrata in \ref{fig:MaLR-freq-synth}: la posizione finale di un pianeta \'e terminata principalmente dalla posizione iniziale e dai tempi caratteristici di accrescimento e migrazione; considerando inoltre l'interazione gravitazionale tra i pianeti si hanno effetti delle risonanze e eccitazione di eccentricit\'a.
 
 \begin{figure}[!ht]
 \begin{subfigure}[b]{0.47\textwidth}
@@ -207,18 +204,13 @@ La distribuzione della popolazione planetaria \'e mostrata in \ref{fig:MaLR-freq
 \end{subfigure}
 \end{figure}
 
-Differenze con osservazioni.
-
 Popolazione pianeti in origine nettuniani (frazione giaccio nel core $50\%$) che migrano all'interno accumulando materiale roccioso (frazione ghiaccio nel core $10-20\%$): saturazione momento di corotazione positivo.
 
-\end{workout}
 \begin{itemize}
 \item Numerosi sistemi con piccola massa
 \item Sistemi pianeti di piccola massa e giganti: sweet spot per pianeti giganti \'e all'esterno dell'ice-line.
 \item Un pianeta gigante superstite di scattering trapianeti gignti vicini. Sistemi rari formati in dischi massicci con alta metallicit\'a
 \end{itemize}
-
-
 
 \begin{figure}[!ht]
 \includegraphics[trim={0cm 10cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{MaLR-freq-synth}\label{fig:MaLR-freq-synth}
@@ -263,6 +255,8 @@ O&10-20&50-60\\
 \end{table}
 
 Nettuno/Saturno in posizioni poco affollate
+
+Differenze con osservazioni: diagramma m-a exoplanets
 
 
 \begin{figure}[!ht]\includegraphics[trim={0cm 17cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{MR-freq-obssynth}\label{}\caption{Distribuzioni di massa e raggio per popolazione planetaria sintetica (linea nera) e distribuzioni osservate tramite RV e transiti (linea blu) corrette per i bias. Da \cite{mordasini2018planetary}.}\end{figure}
