--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -136,6 +136,8 @@ f_{va04}=1.668(\frac{M_p}{\mjupiter{}})\expy{1/3}\exp{-\frac{M_p}{1.5\mjupiter{}
 
 \subsection{Parametrizzazioni della migrazione.}
 
+Il primo modello di migrazione di tipo I (\cite{tanaka2002three}) assume disco localmente isotermo
+
 \begin{equation}
 \TDy{t}{r}=f(p,q,p_{\nu},p_{\xi})\frac{M_p}{M_*}\frac{\Sigma r^2}{M_*}(\frac{r\Omega}{c_s})^2r\Omega
 \end{equation}
