--- a/seminario.bib
+++ b/seminario.bib
@@ -234,6 +234,13 @@ pages={1282},
   year={2011}
 }
 
+@article{benz2014planet,
+  title={Planet population synthesis},
+  author={Benz, Willy and Ida, Shigeru and Alibert, Yann and Lin, DNC and Mordasini, Christoph},
+  journal={arXiv preprint arXiv:1402.7086},
+  year={2014}
+}
+
 @book{perryman2011exoplanet,
   title={The exoplanet handbook},
   author={Perryman, Michael},
