--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 %openany
 
 %% rimuove workout errata dalla versione da consegnare
-\def\versione{bozza}%%VERSIONE
+\def\versione{consegna}%%VERSIONE
 \def\bozza{bozza}
 \def\consegna{consegna}
 %%%PENALITIES
