--- a/main.tex
+++ b/main.tex
@@ -136,10 +136,12 @@ A questo scopo  \'e necessario introdurre una descrizione semplificata dei proce
 {\let\clearpage\relax\let\cleardoublepage\relax
 \backmatter
 }
-%\newgeometry{margin=60px,tmargin=20px}%%APPENDICE
-\appendix
-\part{Appendice}
-\input{appendice}
+%\newgeometry{margin=60px,tmargin=20px}%
+
+%APPENDICE
+%\appendix
+%\part{Appendice}
+%\input{appendice}
 %\restoregeometry
 \printbibliography
 %\listoffigures
