--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -276,18 +276,18 @@ O&10-20&50-60\\
 \caption{Percentuale di stelle con N pianeti del dato tipo nella popolazione sintetica di \cite{mordasini2018planetary} e confronto con osservazioni.}\label{planetfreq}
 \end{table}
 
-La figura \ref{fig:ma-synth} suggerisce che la posizione di Nettuno e Saturno fosse probabilmente pi\'u interna (Grand-tack scenario)
+La posizione di Nettuno e Saturno nella figura \ref{fig:ma-synth} suggerisce che la posizione iniziale fosse probabilmente pi\'u interna (Grand-tack scenario).
 
 La tabella \ref{fig:planetfreq} mostra un buon accordo tra teoria e osservazione per frequenza di pianeti giganti e sistemi compatti.
 
-Il confronto della distribuzione di massa tra teorica e osservata mostra il buon accordo della pendenza nei due regimi di accrescimento e della posizione della massa critica. Per quanto riguarda la distribuzione dei raggi planetarii il picco a $1\rjupiter{}$ \'e meno pronunciato perch\'e sono inclusi solo pianeti giganti vicini e la distribuzione sintetica cresce meno rapidamente a apiccoli raggi. Infine il gran numero di pianeti terrestri pu\'o collidere dando luogo a pianeti pi\'u massicci: nalla popolazione sintetica le interazioni dinamiche sono simulate per il tempo di vita del disco.
+Il confronto della distribuzione di massa tra teorica e osservata mostra il buon accordo della pendenza nei due regimi di accrescimento e della posizione della massa critica. Per quanto riguarda la distribuzione dei raggi planetarii il picco a $1\rjupiter{}$ \'e meno pronunciato perch\'e sono inclusi solo pianeti giganti vicini e la distribuzione sintetica cresce meno rapidamente a piccoli raggi. Infine il gran numero di pianeti terrestri della popolazione sintetica pu\'o collidere dando luogo a pianeti pi\'u massicci tuttavia le interazioni dinamiche sono simulate solo per il tempo di vita del disco.
 
-\begin{figure}[!ht]\includegraphics[trim={0cm 17cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{MR-freq-obssynth}\label{}\caption{Distribuzioni di massa e raggio per popolazione planetaria sintetica (linea nera) e distribuzioni osservate tramite RV e transiti (linea blu) corrette per i bias. Da \cite{mordasini2018planetary}.}\end{figure}
+\begin{figure}[!ht]\includegraphics[trim={0cm 17cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{MR-freq-obssynth}\label{fig:MR-freq-obssynth}\caption{Distribuzioni di massa e raggio per popolazione planetaria sintetica (linea nera) e distribuzioni osservate tramite RV e transiti (linea blu) corrette per i bias. Da \cite{mordasini2018planetary}.}\end{figure}
 
-La probabilit\'a di osservare pianeti giganti aumenta con la metallicit\'a: la figura \ref{} mostra che l'incremento relativo \'e in accordo.
+La probabilit\'a di osservare pianeti giganti aumenta con la metallicit\'a: la figura \ref{fig:giant-Zsynth} mostra che l'incremento relativo \'e in accordo con le osservazioni.
 
 \begin{figure}[!ht]
-\includegraphics[trim={0cm 10cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{giant-Zsynth}
+\includegraphics[trim={0cm 10cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{giant-Zsynth}\label{fig:giant-Zsynth}
 \caption{Distribuzione di stelle che ospitano pianeti giganti ($M\geq300\mearth{}$) in funzione della metallicit\'a. Nero: popolazione sintetica. Blu: fit da osservazioni. Da \cite{mordasini2018planetary}. }
 \end{figure}
 
