--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -133,9 +133,9 @@ Effects of inhomogenous infall on obliquity (tremaine 91, bate 10)
 \chapter{Caratteristiche della popolazione di esopianeti}
 }
 
-\begin{wrapfigure}[14]{l}{0.55\textwidth}
+\begin{wrapfigure}[15]{l}{0.55\textwidth}
 \includegraphics[trim={0cm 0 0 0},clip, width=0.5\textwidth]{obsMa}\label{fig:Maplot}
-\caption{Diagramma massa-distanza degli esopianeti in ''The extrasolar planet encyclopedia''. Rosso, celeste, magenta e verde sono pianeti rivelati tramite RV, T, osservazione diretta e microlensing. Da \cite{mordasini2018}.}
+\caption{Diagramma massa-distanza degli esopianeti in ''The extrasolar planet encyclopedia''. Rosso, celeste, magenta e verde sono pianeti rivelati tramite RV, T, osservazione diretta e microlensing. Da \cite{mordasini2018planetary}.}
 \end{wrapfigure}
 
 La popolazione degli esopianeti osservata riflette quella reale tramite gli effetti di selezione dovuti alla probabilit\'a di rivelamento della tecnica/strumento particolari. Le osservazioni pi\'u numerose sono basate sull'osservazione della velocit\'a lungo la linea di vista dovuto al moto della stella attorno al baricentro del sistema stella pianeta (RV) o differenza nella luminosit\'a dovuto al transito del pianeta tra stella e osservatore (T).
