--- a/usepkg.sty
+++ b/usepkg.sty
@@ -10,6 +10,9 @@
 %%%
 \usepackage[backend=biber,style=authoryear,maxcitenames=1,natbib=true]{biblatex}
 %%%
+
+\usepackage[export]{adjustbox}
+
 \usepackage{ebgaramond}
 %\usepackage{pxfonts}
 \usepackage[T1]{fontenc}
