--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -17,15 +17,15 @@ planet population synthesis
 \section{Modello disco di accrescimento e distribuzione condizioni iniziali}
 %Refs: Sec4 mordasini09
 
-\begin{wrapfigure}[17]{l}{0.5\textwidth}
-\includegraphics[trim={0cm 5cm 0 0},clip, keepaspectratio, width=0.5\textwidth]{GFM}\label{fig:GFM}
+\begin{wrapfigure}[16]{l}{0.6\textwidth}
+\includegraphics[left,trim={0cm 5cm 0 0},clip, keepaspectratio, width=0.8\textwidth]{GFM}
 \caption{Schema dei processi che \'e necessario includere in un modello di formazione planetario coerente.
- Da \cite{benz2014planet}.}
+ Da \cite{benz2014planet}.}\label{fig:GFM}
 \end{wrapfigure}
 
 La simulazione della formazione planetaria implica la conoscenza della struttura del disco di gas e della densit\'a della componente solida. Le condizioni in fondo all'atmosfera planetaria forniscono le condizioni di temperatura e pressione all'estremo dell'inviluppo gassoso. La struttura del disco determina anche il rate massimo di accrescimento del gas. Il rate d'accrescimento di solidi \'e determinato dalla sezione d'urto efficace, determinata dalla struttura dell'inviluppo gassoso, dalla densit\'a di solidi nel disco e dalla velocit\'a orbitale. La luminosit\'a del pianeta \'e determinata dal rate di accrescimento dei solidi e dal rate di contrazione del pianeta. Infine la migrazione \'e determinata dalla caretteristiche del disco e dalla massa del pianeta.
 
-\clearpage
+\cleardoublepage
 
 \begin{workout}[planet luminosity]
 \begin{align}
@@ -204,8 +204,8 @@ planet dominates: $\TDy{t}{a}=-\frac{3\nu}{a}\frac{\Sigma(a,t)a^2}{M_p}$
 La soluzione del modello di formazione planetario variando le condizioni iniziali in maniera opportuna e determinando un gran numero di combinazioni tramite metodi di montecarlo produce un ensemble di sistemi da cui, tramite confronto statistico con la popolazione osservata,  si determina la rispondenza con la realt\'a.
 
 \begin{figure}[!ht]
-\includegraphics[trim={0cm 12cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{ma-synth}\label{fig:ma-synth}
-\caption{Simulazione popolazione planetaria di 504 sistemi Punti rossi: pianeti giganti con $M_e/M_c>1$; punti blu: pianeti che hanno accresciuto core oltre la iceline mentre i punti verdi all'interno dell'iceline. Da \cite{mordasini2018planetary}.}
+\includegraphics[trim={0cm 12cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{ma-synth}
+\caption{Simulazione popolazione planetaria di 504 sistemi Punti rossi: pianeti giganti con $M_e/M_c>1$; punti blu: pianeti che hanno accresciuto core oltre la iceline mentre i punti verdi all'interno dell'iceline. Da \cite{mordasini2018planetary}.}\label{fig:ma-synth}
 \end{figure}
 
 La figura \ref{fig:MaLR-freq-synth} mostra la distribuzione della popolazione sintetica nel diagramma massa-distanza: la posizione finale di un pianeta \'e terminata principalmente dai tempi caratteristici di accrescimento e migrazione; considerando inoltre l'interazione gravitazionale tra i pianeti si hanno effetti delle risonanze e eccitazione di eccentricit\'a.
@@ -220,7 +220,7 @@ La figura \ref{fig:MaLR-freq-synth} mostra la distribuzione della popolazione si
 \begin{subfigure}[b]{0.47\textwidth}
 \centering
 \includegraphics[trim={0cm 12cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{envelopecoresynth}
-\caption{Massa inviluppo gassoso vs massa core. Il colore indica la distanza in $\log{\frac{a}{\si{\astronomicalunit}}}$. La linea continua mostra andamento $M_c\expy{-q_{KH}-1}=M_c\expy{2.5}$ precedente alla fase runaway di accrescimento gassoso. Da \cite{mordasini2018planetary}. }
+\caption{Massa inviluppo gassoso vs massa core. Il colore indica la distanza in $\log{\frac{a}{\si{\astronomicalunit}}}$. La linea continua mostra andamento $M_c\expy{-q_{KH}-1}=M_c\expy{2.5}$ precedente alla fase runaway di accrescimento gassoso. Da \cite{mordasini2018planetary}. }\label{fig:envelopecoresynth}
 \end{subfigure}
 \end{figure}
 
@@ -235,8 +235,8 @@ Alcune caratteristiche dell'ensemble sintetico (\cite{mordasini2018planetary}):
 Inoltre in \ref{fig:ma-synth} \'e evidente l'effetto della saturazione del momento torcente di corotazione con conseguente migrazione rapida all'interno: popolazione pianeti in origine nettuniani (frazione giaccio nel core $50\%$) che migrano all'interno accumulando materiale roccioso (frazione ghiaccio nel core $10-20\%$).
 
 \begin{figure}[!ht]
-\includegraphics[trim={0cm 10cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{MaLR-freq-synth}\label{fig:MaLR-freq-synth}
-\caption{Distribuzione di massa, semiasse, luminosit\'a, raggio. Da \cite{mordasini2018planetary}. }
+\includegraphics[trim={0cm 10cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{MaLR-freq-synth}
+\caption{Distribuzione di massa, semiasse, luminosit\'a, raggio. Da \cite{mordasini2018planetary}. }\label{fig:MaLR-freq-synth}
 \end{figure}
 
 \subsection{Caratteristiche delle distribuzioni delle propriet\'a fisiche dei pianeti e significativit\'a}
@@ -273,7 +273,7 @@ $\exv{S}$&18.0&54.0\\
 O&10-20&50-60\\
 \hline
 \end{tabular}
-\caption{Percentuale di stelle con N pianeti del dato tipo nella popolazione sintetica di \cite{mordasini2018planetary} e confronto con osservazioni.}\label{planetfreq}
+\caption{Percentuale di stelle con N pianeti del dato tipo nella popolazione sintetica di \cite{mordasini2018planetary} e confronto con osservazioni.}\label{tab:planetfreq}
 \end{table}
 
 La posizione di Nettuno e Saturno nella figura \ref{fig:ma-synth} suggerisce che la posizione iniziale fosse probabilmente pi\'u interna (Grand-tack scenario).
@@ -282,13 +282,13 @@ La tabella \ref{fig:planetfreq} mostra un buon accordo tra teoria e osservazione
 
 Il confronto della distribuzione di massa tra teorica e osservata mostra il buon accordo della pendenza nei due regimi di accrescimento e della posizione della massa critica. Per quanto riguarda la distribuzione dei raggi planetarii il picco a $1\rjupiter{}$ \'e meno pronunciato perch\'e sono inclusi solo pianeti giganti vicini e la distribuzione sintetica cresce meno rapidamente a piccoli raggi. Infine il gran numero di pianeti terrestri della popolazione sintetica pu\'o collidere dando luogo a pianeti pi\'u massicci tuttavia le interazioni dinamiche sono simulate solo per il tempo di vita del disco.
 
-\begin{figure}[!ht]\includegraphics[trim={0cm 17cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{MR-freq-obssynth}\label{fig:MR-freq-obssynth}\caption{Distribuzioni di massa e raggio per popolazione planetaria sintetica (linea nera) e distribuzioni osservate tramite RV e transiti (linea blu) corrette per i bias. Da \cite{mordasini2018planetary}.}\end{figure}
+\begin{figure}[!ht]\includegraphics[trim={0cm 17cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{MR-freq-obssynth}\caption{Distribuzioni di massa e raggio per popolazione planetaria sintetica (linea nera) e distribuzioni osservate tramite RV e transiti (linea blu) corrette per i bias. Da \cite{mordasini2018planetary}.}\label{fig:MR-freq-obssynth}\end{figure}
 
 La probabilit\'a di osservare pianeti giganti aumenta con la metallicit\'a: la figura \ref{fig:giant-Zsynth} mostra che l'incremento relativo \'e in accordo con le osservazioni.
 
 \begin{figure}[!ht]
-\includegraphics[trim={0cm 10cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{giant-Zsynth}\label{fig:giant-Zsynth}
-\caption{Distribuzione di stelle che ospitano pianeti giganti ($M\geq300\mearth{}$) in funzione della metallicit\'a. Nero: popolazione sintetica. Blu: fit da osservazioni. Da \cite{mordasini2018planetary}. }
+\includegraphics[trim={0cm 10cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{giant-Zsynth}
+\caption{Distribuzione di stelle che ospitano pianeti giganti ($M\geq300\mearth{}$) in funzione della metallicit\'a. Nero: popolazione sintetica. Blu: fit da osservazioni. Da \cite{mordasini2018planetary}. }\label{fig:giant-Zsynth}
 \end{figure}
 
 \begin{workout}[Orbital structure and MMR: comparison simulation/observation]
