adjustbox: no export

--- a/usepkg.sty
+++ b/usepkg.sty
@@ -11,7 +11,8 @@
 \usepackage[backend=biber,style=authoryear,maxcitenames=1,natbib=true]{biblatex}
 %%%
 
-\usepackage[export]{adjustbox}
+\usepackage[]{adjustbox}
+%export: Exports most keys of \adjustbox to \includegraphics so that they can be used with this macro as well.
 
 \usepackage{ebgaramond}
 %\usepackage{pxfonts}
