--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -17,15 +17,15 @@ planet population synthesis
 \section{Modello disco di accrescimento e distribuzione condizioni iniziali}
 %Refs: Sec4 mordasini09
 
-\begin{wrapfigure}[16]{l}{0.6\textwidth}
-\includegraphics[left,trim={0cm 5cm 0 0},clip, keepaspectratio, width=0.8\textwidth]{GFM}
+\begin{wrapfigure}[22]{l}{0.7\textwidth}
+\includegraphics[trim={8cm 5cm 8cm 0},clip, keepaspectratio, width=0.7\textwidth]{GFM}
 \caption{Schema dei processi che \'e necessario includere in un modello di formazione planetario coerente.
  Da \cite{benz2014planet}.}\label{fig:GFM}
 \end{wrapfigure}
 
 La simulazione della formazione planetaria implica la conoscenza della struttura del disco di gas e della densit\'a della componente solida. Le condizioni in fondo all'atmosfera planetaria forniscono le condizioni di temperatura e pressione all'estremo dell'inviluppo gassoso. La struttura del disco determina anche il rate massimo di accrescimento del gas. Il rate d'accrescimento di solidi \'e determinato dalla sezione d'urto efficace, determinata dalla struttura dell'inviluppo gassoso, dalla densit\'a di solidi nel disco e dalla velocit\'a orbitale. La luminosit\'a del pianeta \'e determinata dal rate di accrescimento dei solidi e dal rate di contrazione del pianeta. Infine la migrazione \'e determinata dalla caretteristiche del disco e dalla massa del pianeta.
 
-\cleardoublepage
+%\cleardoublepage
 
 \begin{workout}[planet luminosity]
 \begin{align}
@@ -213,7 +213,7 @@ La figura \ref{fig:MaLR-freq-synth} mostra la distribuzione della popolazione si
 \begin{figure}[!ht]
 \begin{subfigure}[b]{0.47\textwidth}
 \centering
-\includegraphics[trim={0cm 12cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{track1}
+\includegraphics[trim={2cm 12cm 2cm 0},clip, width=\textwidth,keepaspectratio]{track1}
 \caption{Formazione di un sistema planetario nel diagramma $a-M$: alla scomparsa del disco protoplanetario si hanno 2 pianeti giganti, un nettuniano caldo e 3 pianeti terrestri. La scala di colore indica la composizione $\frac{M_e}{M_c}$. Da \cite{mordasini2018planetary}.}\label{fig:track1}
 \end{subfigure}
 ~
@@ -278,7 +278,7 @@ O&10-20&50-60\\
 
 La posizione di Nettuno e Saturno nella figura \ref{fig:ma-synth} suggerisce che la posizione iniziale fosse probabilmente pi\'u interna (Grand-tack scenario).
 
-La tabella \ref{fig:planetfreq} mostra un buon accordo tra teoria e osservazione per frequenza di pianeti giganti e sistemi compatti.
+La tabella \ref{tab:planetfreq} mostra un buon accordo tra teoria e osservazione per frequenza di pianeti giganti e sistemi compatti.
 
 Il confronto della distribuzione di massa tra teorica e osservata mostra il buon accordo della pendenza nei due regimi di accrescimento e della posizione della massa critica. Per quanto riguarda la distribuzione dei raggi planetarii il picco a $1\rjupiter{}$ \'e meno pronunciato perch\'e sono inclusi solo pianeti giganti vicini e la distribuzione sintetica cresce meno rapidamente a piccoli raggi. Infine il gran numero di pianeti terrestri della popolazione sintetica pu\'o collidere dando luogo a pianeti pi\'u massicci tuttavia le interazioni dinamiche sono simulate solo per il tempo di vita del disco.
 
