--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -282,7 +282,7 @@ infrared excess: gail hoppe10
 
 
 \begin{figure}[!ht]
-\includegraphics[width=0.9\textwidth]{accretiontimeline}\caption{Rappresentazione schematica del processo di formazione protopianeti dalla polvere. Da \cite{perryman2014exoplanets}.}\label{fig:accretiontimeline}
+\includegraphics[width=0.9\textwidth]{accretiontimeline}\caption{Rappresentazione schematica del processo di formazione protopianeti dalla polvere. Da \cite{perryman2011exoplanet}.}\label{fig:accretiontimeline}
 \end{figure}
 
 \begin{workout}[Refs GI vs CA]
