--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -691,6 +691,20 @@ Planet-disk interactions: exchange of angular momentum. Low mass planet-linear t
 Low mass planets: Lindblad and corotation torque. Rapid migration of intermediate mass planets. Gap forming massive planets: slower migration determined by viscous evolution of disk. (Role of disk self-gravity and MHD turbulence as function of planet mass).
 \end{workout}
 
+\begin{workout}[Bernoulli -Fluid dynamics (Landau)]
+Bernulli: lungo linea di flusso $\frac{1}{2}v^2+w+gz=\const{}$
+\end{workout}
+
+\begin{workout}[Not isoentropic flow (pg14) -Fluid dynamics (Landau)]
+$\TDof{t}(\frac{\vec{\omega}\cdot\nabla s}{\rho})=0$
+\end{workout}
+
+\begin{workout}[Flow between rotating cylinder (pg55) -Fluid dynamics (Landau)]
+$v=ar+\frac{b}{r}$
+\end{workout}
+
+
+
 \begin{workout}[migration and disk parametrizzation]
 Toward deterministic model of planetary formation IV: effects of type-I migration (highly optically thin disk)
 \end{workout}
