Update on Overleaf.

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -700,7 +700,13 @@ $\TDof{t}(\frac{\vec{\omega}\cdot\nabla s}{\rho})=0$
 \end{workout}
 
 \begin{workout}[Flow between rotating cylinder (pg55) -Fluid dynamics (Landau)]
-$v=ar+\frac{b}{r}$
+Navier-Stokes equation gives
+\begin{align*}
+&\TDy{r}{P}=\frac{\rho v^2}{r}\\
+&\TtwoDy{r}{v}+\frac{1}{r}\TDy{r}{v}-\frac{v}{r^2}
+\end{align*}
+cercabdo soluzione della forma $r^n$ l'ultima ha soluzione: $v=ar+\frac{b}{r}$.
+a,b determinate da condizioni al contorno
 \end{workout}
 
 
