--- a/mathOp.sty
+++ b/mathOp.sty
@@ -18,3 +18,4 @@
 \DeclareMathOperator{\sign}{Sign}
 \DeclareMathOperator{\Rey}{Re}
 \DeclareMathOperator{\Pra}{Pr}
+\DeclareMathOperator{\const}{const}
