cerco di trovare il ritmo ma non troppo

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -288,6 +288,12 @@ infrared excess: gail hoppe10
 planetesimal hypoithesis: chamberlin 05, Safronov 69, Hayashi 77. Formation on dynamical scale via GI: Kuiper 51, Cameron 62.
 Core accretion o instabilit\'a gravitazionale?
 La correlazione tra metallicit\'a del disco protoplanetario e il numero di pianeti (giganti) \'e in accordocon osservazioni?
+The runt of the litter: why planets formed through gravitational instability can only be failed binary stars (2010).
+Planetary formation scenario revisited: CA vs GI (2007)
+\end{workout}
+
+\begin{workout}[Succo beamer formazione]
+
 \end{workout}
 
 
